Improved Javascript and Layout

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,12 +20,9 @@ pre {
 
 a {
   color: #000;
-  &:visited {
-    color: #666;
-  }
+  text-decoration:none;
   &:hover {
-    color: #fff;
-    background-color: #000;
+    text-decoration:underline;
   }
 }
 
