--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script type="text/javascript">
+      var Paths={
+        lists:"<%= lists_path %>.json",
+        new_list:"<%= new_list_path %>.json",
+        list: "/lists/:id.json"
+              
+      }
+    </script>
   </head>
   <body>
     <% if user_signed_in? %> 
