--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -1,7 +1,7 @@
 
 #sidebar {
   width:300px;
-  background-color:#AAA;
+  background-color:#F7DFAC;
   position:absolute;
   height:100%;
   margin:0;
@@ -9,6 +9,9 @@
   left:0;
   #title {
     text-align:center;
+    a {
+      color:#000;
+    }
   }
   #user-config {
     list-style-type:none;
@@ -25,18 +28,49 @@
     bottom:0;
     padding:5px 0;
     text-align:center;
-    width:100%;
+    width:50%;
+    left:50%;
+  }
+  #delete-list {
+    display:block;
+    position:absolute;
+    bottom:0;
+    padding:5px 0;
+    text-align:center;
+    width:50%;
+    left:0;
+    border-right:1px solid #000;
   }
   #lists {
     display:block;
     position:absolute;
     list-style-type:none;
     width:100%;
+    top: 100px;
+    bottom: 30px;
+    overflow:auto;
     li {
       width:100%;
+      border-bottom: 1px dotted #B49044;
+      &.selected {
+        background-color:#FFD273;
+      }
+      &:hover {
+        background-color: #FFDD96;
+      }
       a { 
         display:block;
         padding: 10px;
+        .delete,.count {
+          float:right;
+          padding: 0 5px;
+        }
+        .delete:hover {
+          text-decoration:underline;
+        }
+      }
+      input {
+        padding: 8.2px;
       }
     }
   }
