--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,8 +11,15 @@
 </nav>
 <nav id="lists">
 <% all_lists.each do |list| %>
-  <li><%=link_to list.name, list_path(list) %></li>
+  <li <%= 'class=selected' if !@list.nil? && list.id==@list.id %> id="list_<%=list.id.to_s%>">
+  <%=link_to list_path(list) do%>
+    <span class="name"><%= list.name %></span>
+    <!--<span class="delete">x</span>-->
+    <span class="count"><%= list.tasks.count %></span>
+  <% end %>
+  </li>
 <% end %>
 </nav>
+<%= link_to t('lists.delete'), list_path(@list), method: 'delete', id: 'delete-list', data: { confirm: t('lists.really_delete', name: @list.name)} unless @list.nil? %>
 <%= link_to t('lists.create'), new_list_path, id: 'new-list'%>
 </aside>
