--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
 <div id="centered-box">
-  
-  <li><%= link_to t('users.sign_in'), new_user_session_path %></li>
+  <ul> 
+    <li><%= link_to t('users.sign_in'), new_user_session_path %></li>
+    <li><%= link_to t('users.register'), new_user_registration_path %></li>
+</ul>
 </div>
