--- a/app/views/lists/_tasklist.html.erb
+++ b/app/views/lists/_tasklist.html.erb
@@ -5,10 +5,15 @@
       <%= '☑' if task.done? %>
       <%= '☐' unless task.done? %>
     <% end %>
-      <a href="#" class="toggle-show">▸</a>
       <%= link_to task.name, edit_list_task_path(@list,task), class: 'task-name' %>
       <%= link_to t('tasks.delete'), list_task_path(@list,task), method: 'delete', class: 'delete-task' %>
-      <div class="task-content"><%=task.content%></div>
-    </li>
-  <% end%>
-</ul>
+      <div class="task-content">
+        <% unless task.content.nil? %>
+          <%= task.content %>
+        <% else %>
+          <i><%= t('tasks.no_task_content') %></i>
+        <% end %>
+      </div>
+      </li>
+    <% end%>
+  </ul>
