--- a/app/views/lists/_tasklist.html.erb
+++ b/app/views/lists/_tasklist.html.erb
@@ -1,19 +1,13 @@
 <ul class="tasklist">
   <% tasks.each do |task| %>
-    <li>
+    <li taskid="<%= task.id %>">
     <%= link_to list_task_toggle_done_path(@list,task), method: 'post', class: 'task-toggle' do %>
       <%= '☑' if task.done? %>
       <%= '☐' unless task.done? %>
     <% end %>
-      <%= link_to task.name, edit_list_task_path(@list,task), class: 'task-name' %>
-      <%= link_to t('tasks.delete'), list_task_path(@list,task), method: 'delete', class: 'delete-task' %>
-      <div class="task-content">
-        <% unless task.content.nil? %>
-          <%= task.content %>
-        <% else %>
-          <i><%= t('tasks.no_task_content') %></i>
-        <% end %>
-      </div>
+      <%= link_to task.name, edit_list_task_path(@list,task), class: 'task-name', taskid: task.id %>
+      <%= link_to t('tasks.delete'), list_task_path(@list,task), method: 'delete', class: 'delete-task' , taskid: task.id%>
+      <div class="task-content"><% unless task.content.nil? %><%= task.content %><% else %><i><%= t('tasks.no_task_content') %></i><% end %></div>
       </li>
     <% end%>
   </ul>
