--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -44,6 +44,10 @@ $sidebar-border-color: #B49044;
     border-right:1px solid #000;
   }
   #lists {
+    margin:0;
+    padding:0;
+  }
+  #lists ul {
     display:block;
     position:absolute;
     list-style-type:none;
@@ -51,6 +55,8 @@ $sidebar-border-color: #B49044;
     top: 100px;
     bottom: 30px;
     overflow:auto;
+    padding:0;
+    margin:0;
     li {
       width:100%;
       border-bottom: 1px dotted $sidebar-border-color;
