--- a/app/views/lists/_tasklist.html.erb
+++ b/app/views/lists/_tasklist.html.erb
@@ -1,9 +1,8 @@
-<ul class="tasklist">
+<ul class="tasklist <%= name %>">
   <% tasks.each do |task| %>
     <li taskid="<%= task.id %>">
     <%= link_to list_task_toggle_done_path(@list,task), method: 'post', class: 'task-toggle' do %>
-      <%= '☑' if task.done? %>
-      <%= '☐' unless task.done? %>
+      <%= task.done? ? '☑' : '☐' %>
     <% end %>
       <%= link_to task.name, edit_list_task_path(@list,task), class: 'task-name', taskid: task.id %>
       <%= link_to t('tasks.delete'), list_task_path(@list,task), method: 'delete', class: 'delete-task' , taskid: task.id%>
