--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -3,7 +3,53 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #task_name {
 }
-.task-content p {
-  padding: 0;
-  margin: 0;
+.tasklist{
+	list-style-type:none;
+	margin: 0;
+	padding: 0;
+	p {
+		padding: 0;
+		margin: 0;
+	}
+	li {
+		margin: 7px 10px;
+		padding: 10px;
+		border-radius:5px;
+		box-shadow:1px 1px 2px #888;
+		cursor: pointer;
+		.delete-task {
+			float:right;
+		}
+		&:hover .task-content{
+			background-color: #D3D3D3;
+		}
+		.task-content {
+			cursor: text;
+			background-color: #CCC;
+			padding: 5px;
+			border-radius: 4px;
+			box-shadow: inset 1px 1px 2px #999;
+			display:none;
+		}
+		#edit-task-content {
+			width: 100%;
+			height: 100%;
+			min-height: 200px;
+		}
+	}
+	&.undone li {
+		background-color: #BBB;
+		&:hover {
+			background-color: #CACACA;
+		}
+	}
+	&.done li{
+		background-color: #C9C9C9;
+		a {
+			color: #666;
+		}
+		&:hover {
+			background-color: #D0D0D0;
+		}
+	}
 }
