--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -16,7 +16,11 @@
 		padding: 10px;
 		border-radius:5px;
 		box-shadow:1px 1px 2px #888;
+
 		cursor: pointer;
+		&.selected {
+			box-shadow:1px 1px 2px #FFF;
+		}
 		.delete-task {
 			float:right;
 		}
