--- a/app/views/lists/_tasklist.html.erb
+++ b/app/views/lists/_tasklist.html.erb
@@ -20,6 +20,12 @@
     <% end %>
     <%= link_to symbol + prio.to_s, '#', class: 'task-priority prio-'+ task.priority.to_s, taskid: task.id %>
     <%= link_to task.name, edit_list_task_path(@list,task), class: 'task-name', taskid: task.id %>
+    <% if !task.due.nil?%>
+      <%taskdue=task.due.to_formatted_s(:rfc822)%>
+    <%else%>
+      <%taskdue=''%>
+    <%end%>
+    <%= link_to taskdue, '#', class: 'task-due', taskid: task.id, date: task.due%>
     <%= link_to t('tasks.delete'), list_task_path(@list,task), method: 'delete', class: 'delete-task' , taskid: task.id%>
     <div class="task-content"><% unless task.content.nil? %><%= simple_format(task.content) %><% else %><i><%= t('tasks.no_task_content') %></i><% end %></div>
     </li>
