--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,7 @@
 <div id="centered-box">
+  <h1>Mirakel v0.2 Alpha</h1>
+  <p>Mirakel is a free Todo-list-tool written in ruby on rails<p>
+  <p>The sourcecode you can find <a href="https://github.com/azapps/mirakel">here</a></p>
   <ul> 
     <li><%= link_to t('users.sign_in'), new_user_session_path %></li>
     <li><%= link_to t('users.register'), new_user_registration_path %></li>
