--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -19,8 +19,10 @@
   </div>
   <div id="lists_box">
     <%=render partial: 'tasklist' , locals: { tasks: @tasks, name: "undone" }%>
-    <h3><%= t('tasks.completed') %></h3>
-    <%=render partial: 'tasklist' , locals: { tasks: @done_tasks, name: "done" }%>
+    <% if @done_tasks %>
+      <h3><%= t('tasks.completed') %></h3>
+      <%=render partial: 'tasklist' , locals: { tasks: @done_tasks, name: "done" }%>
+    <% end %>
   </div>
   <ul id="priopopup" style="display:none">
     <li class="prio-2 task-priority"><a href="#" val="2">+2</a></li>
