Register for TW-Account

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,12 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
+  <div><%= f.label :name %><br />
+  <%= f.text_field :name %></div>
+
+  <div><%= f.label :org %>(optional)<br />
+  <%= f.text_field :org %></div>
+
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
