--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,6 @@
+<div style="background-color:red;color:white;font-weight:bold;padding:10px;">
+Mirakel-web is deprecated! Please use the taskwarrior-sync instead!
+</div>
 <%if !@fehler%>
   <%if params[:id]=="all"%>
     <%style="display:none;"%>
