--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -4,13 +4,13 @@
 
 div#centered-box{
 	$height: 300px;
-	$widht: 500px;
+	$width: 500px;
 	background: none repeat scroll 0 0 #CCCCCC;
 	border: 1px solid #666;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 1.2em;
 	color: #333;
-	width: $widht;
+	width: $width;
 	height: $height;
   top: 50%;
   margin-top:-$height/2;
@@ -22,19 +22,19 @@ div#centered-box{
 
 div#login_box{
 	$height: 270px;
-	$widht: 330px;
+	$width: 330px;
 	background: none repeat scroll 0 0 #CCCCCC;
 	border: 1px solid #666;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 1.2em;
 	color: #333;
 	position: absolute;
-	width: $widht;
+	width: $width;
 	height: $height;
 	top: 33%;
 	left: 50%;
 	margin-top:-$height/2;
-	margin-left:-$widht/2;
+	margin-left:-$width/2;
 	-moz-box-shadow:    3px 3px 5px 6px #ccc;
   -webkit-box-shadow: 3px 3px 5px 6px #ccc;
   box-shadow:         3px 3px 5px 6px #ccc;
